@@ -654,10 +654,11 @@ ephy_embed_get_zoom (EphyEmbed *embed)
  *
  **/
 void
-ephy_embed_scroll (EphyEmbed *embed, int num_lines)
+ephy_embed_scroll (EphyEmbed *embed,
+		   int num_lines)
 {
 	EphyEmbedIface *iface = EPHY_EMBED_GET_IFACE (embed);
-	iface->scroll (embed, num_lines);
+	iface->scroll_lines (embed, num_lines);
 }
 
 /**
@@ -670,10 +671,30 @@ ephy_embed_scroll (EphyEmbed *embed, int num_lines)
  *
  **/
 void
-ephy_embed_page_scroll (EphyEmbed *embed, int num_pages)
+ephy_embed_page_scroll (EphyEmbed *embed,
+			int num_pages)
 {
 	EphyEmbedIface *iface = EPHY_EMBED_GET_IFACE (embed);
-	iface->page_scroll (embed, num_pages);
+	iface->scroll_pages (embed, num_pages);
+}
+
+/**
+ * ephy_embed_scroll_pixels:
+ * @embed: an #EphyEmbed
+ * @dx: the number of pixels to scroll in X direction
+ * @dy: the number of pixels to scroll in Y direction
+ *
+ * Scrolls the view by pixels. Positive numbers scroll down resp. right,
+ * negative numbers scroll up resp. left.
+ *
+ **/
+void
+ephy_embed_scroll_pixels (EphyEmbed *embed,
+			  int dx,
+			  int dy)
+{
+	EphyEmbedIface *iface = EPHY_EMBED_GET_IFACE (embed);
+	iface->scroll_pixels (embed, dx, dy);
 }
 
 /**
