@@ -1,3 +1,14 @@
+2005-12-07  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/ephy-embed.c: (ephy_embed_scroll),
+	(ephy_embed_page_scroll), (ephy_embed_scroll_pixels):
+	* embed/ephy-embed.h:
+	* embed/mozilla/EphyBrowser.cpp:
+	* embed/mozilla/EphyBrowser.h:
+	* embed/mozilla/mozilla-embed.cpp:
+
+	Add ephy_embed_scroll_pixels.
+
 2005-12-06  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* embed/ephy-embed.c: (ephy_embed_scroll),
